# serena-rust

./: .gitignore  Cargo.toml  README.md  build_and_run.sh
migrations/: 20220717150711_setup.sql
src/: main.rs
src/commands/: echo.rs  ping.rs
