[package]
name = "serena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "sqlite", "offline"] }